--- a/studyguide.tex
+++ b/studyguide.tex
@@ -31,7 +31,7 @@
 	top=10mm,
 }
 \graphicspath{{images/}{../images/}}
-
+\newcommand{\mat}[1]{\bm{\mathit{#1}}}
 \begin{document}
 		\begin{titlepage}
 		\pagenumbering{gobble}
